PROD-9735 - Fix create / edit forum modal fields layout issue

--- a/src/js/admin/settings-2.0/styles/scss/screens/features/_forums-list.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/features/_forums-list.scss
@@ -706,50 +706,6 @@
 		pointer-events: none;
 	}
 
-	&__body {
-		padding: 24px;
-
-		.components-base-control {
-			margin-bottom: 16px;
-		}
-
-		// Override WordPress components uppercase labels to sentence case.
-		.components-input-control__label,
-		.components-base-control__label {
-			display: block;
-			text-transform: none !important;
-			font-size: 13px !important;
-			font-weight: 500 !important;
-			color: $bb-text-color;
-			margin-bottom: 8px;
-		}
-
-		.components-text-control__input,
-		.components-textarea-control__input {
-			@include bb-input-text;
-		}
-
-		textarea {
-			min-height: 72px;
-		}
-
-		.components-input-control__container {
-
-			.components-select-control__input {
-				@include bb-admin-settings-select;
-			}
-
-			&:has(> .components-select-control__input) {
-				padding: 0 !important;
-
-				.components-input-control__suffix,
-				.components-input-control__backdrop {
-					display: none !important;
-				}
-			}
-		}
-	}
-
 	&__permalink-field {
 		margin-bottom: 16px;
 
